--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
       "dev": "vite",
       "build": "vite build",
       "lint": "eslint .",
-      "preview": "vite preview"
+      "preview": "vite preview",
+      "deploy": "vite build && gh-pages -d dist"
    },
    "dependencies": {
       "prop-types": "^15.8.1",
@@ -25,6 +26,7 @@
       "eslint-plugin-react-hooks": "^5.1.0-rc.0",
       "eslint-plugin-react-refresh": "^0.4.12",
       "globals": "^15.9.0",
-      "vite": "^5.4.8"
+      "vite": "^5.4.8",
+      "vite-plugin-gh-pages": "^1.0.0"
    }
 }
